Bug 163562. Home/end keys should not affect horizontal scrolling. Patch by dmitry@kirsanov.com. r=aaronleventhal, sr=roc